working dynamic list

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     WDD 330: Portfolio
   </h2>
   <hr>
+  <!-- <input type="text" > -->
   <ol id="assignment-ordered-list"></ol>
   <footer>
     &copy;2022 | Matthew B. Christensen | Utah</a>
