updating link to week1 notes

--- a/week1/week1_notes.html
+++ b/week1/week1_notes.html
@@ -4,15 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Portfolio for Matthew Christensen in WDD 330: Web Frontend Development II at Brigham Young University - Idaho">
+  <meta name="description" content="Notes for week 1 reading">
   <link rel="stylesheet" href="./index/css/normalize.css">
   <link rel="stylesheet" href="./index/css/small.css">
   <link rel="stylesheet" href="./index/css/medium.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat:wght@100&display=swap" rel="stylesheet">
-  <script src="./index/js/index.js"></script>
-  <title>Christensen Portfolio</title>
+  <title>Week 1 Notes</title>
 </head>
 
 <body>
@@ -23,11 +22,15 @@
     </h1>
   </header>
   <h2>
-    WDD 330: Portfolio
+    WDD 330: Week 1 Notes
   </h2>
   <hr>
-  <!-- <input type="text" > -->
-  <ol id="assignment-ordered-list"></ol>
+  <h3>How do I store data so it isn't lost when the application stops?</h3>
+  <p></p>
+  <h3>How do I get data back into my application once it has been stored?</h3>
+  <p></p>
+  <h3>What can I do to allow the user to communicate?</h3>
+  <p></p>
   <footer>
     &copy;2022 | Matthew B. Christensen | Utah</a>
     <div id="last-updated"></div>
