fixed week1 notes to correctly reference css/js pages

--- a/week1/week1_notes.html
+++ b/week1/week1_notes.html
@@ -5,18 +5,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Notes for week 1 reading">
-  <link rel="stylesheet" href="./index/css/normalize.css">
-  <link rel="stylesheet" href="./index/css/small.css">
-  <link rel="stylesheet" href="./index/css/medium.css">
+  <link rel="stylesheet" href="../index/css/normalize.css">
+  <link rel="stylesheet" href="../index/css/small.css">
+  <link rel="stylesheet" href="../index/css/medium.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat:wght@100&display=swap" rel="stylesheet">
   <title>Week 1 Notes</title>
+  <script src="../index/js/last-updated.js"></script>
 </head>
 
 <body>
   <header>
-    <img src="./index/img/profile_pic.jpg" alt="Profile Pirture" height="135">
     <h1>
       Matthew B. Christensen
     </h1>
