--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat:wght@100&display=swap" rel="stylesheet">
-  <script src="./index/js/index.js"></script>
+  <script src="./index/js/last-updated.js"></script>
+  <script src="./index/js/table-of-contents.js"></script>
   <title>Christensen Portfolio</title>
 </head>
 
