fixed html validation error

--- a/week1/story_editor.html
+++ b/week1/story_editor.html
@@ -34,7 +34,7 @@
   <hr>
   <p>Hello</p>
   <footer>
-    &copy;2022 | Matthew B. Christensen | Utah</a>
+    &copy;2022 | Matthew B. Christensen | Utah
     <div id="last-updated"></div>
   </footer>
 </body>
