--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- <input type="text" > -->
   <ol id="assignment-ordered-list"></ol>
   <footer>
-    &copy;2022 | Matthew B. Christensen | Utah</a>
+    &copy;2022 | Matthew B. Christensen | Utah
     <div id="last-updated"></div>
   </footer>
 </body>
