--- a/week1/week1_notes.html
+++ b/week1/week1_notes.html
@@ -32,7 +32,7 @@
   <h3>What can I do to allow the user to communicate?</h3>
   <p></p>
   <footer>
-    &copy;2022 | Matthew B. Christensen | Utah</a>
+    &copy;2022 | Matthew B. Christensen | Utah
     <div id="last-updated"></div>
   </footer>
 </body>
