finished the story editor and the notes from the activity and reading

--- a/week1/week1_notes.html
+++ b/week1/week1_notes.html
@@ -12,7 +12,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat:wght@100&display=swap" rel="stylesheet">
   <title>Week 1 Notes</title>
-  <script src="../index/js/last-updated.js"></script>
 </head>
 
 <body>
@@ -25,15 +24,18 @@
     WDD 330: Week 1 Notes
   </h2>
   <hr>
+
   <h3>How do I store data so it isn't lost when the application stops?</h3>
-  <p></p>
+  <p>Data can easily be stored in the users local browser using the "localStorage.SetItem()" function. I have used this many times in past applications and it can be very useful. There wasn't really anything new here for me to learn although you can see the example I created in the "Story Editor" in the table of contents.</p>
+  
   <h3>How do I get data back into my application once it has been stored?</h3>
-  <p></p>
+  <p>Data can be easily retrieved from the localStorage using the "localStorage.GetItem()" functioln. Once again I have used this before and didn't have much more than a brief review of the topic.</p>
   <h3>What can I do to allow the user to communicate?</h3>
-  <p></p>
+  <p>I'm not sure what this question is referring to, but I'm guessing it means through inputs. I can give them text boxes and inputs that accept information in all kinds of ways but also help limit the type of response the user is able to give. This makes the input more easily usable and testable. </p>
   <footer>
     &copy;2022 | Matthew B. Christensen | Utah
     <div id="last-updated"></div>
   </footer>
+  <script src="../index/js/last-updated.js"></script>
 </body>
 </html>
