--- a/week1/story_editor.html
+++ b/week1/story_editor.html
@@ -13,13 +13,37 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat:wght@100&display=swap" rel="stylesheet">
   <title>Story Editor</title>
   <script>
-
+    function loadStory() {
+      var storyName = document.getElementById("name_input").value
+      var storyHTML = localStorage.getItem(storyName)
+      document.getElementById("story_editor").value = storyHTML
+    }
+    function saveStory() {
+      var storyName = document.getElementById("name_input").value
+      var storyHTML = document.getElementById("story_editor").value
+      localStorage.setItem(storyName, storyHTML)
+    }
+    function displayStory() {
+      var storyHTML = document.getElementById("story_editor").value
+      document.getElementById("story_display").innerHTML = storyHTML
+    }
   </script>
 
   <style>
-
+    textarea{
+      display: block;
+      width: 800px;
+      height: 250px;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: lightyellow;
+    }
+    .boxsizingBorder {
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+    }
   </style>
-  <script src="../index/js/last-updated.js"></script>
 </head>
 
 <body>
@@ -32,10 +56,18 @@
     WDD 330: Week 1 Story Editor
   </h2>
   <hr>
-  <p>Hello</p>
+  Story Name: <input id="name_input"></input>
+  <section>
+    <button onclick="loadStory()">Find and Edit</button>
+    <button onclick="saveStory()">Save It</button>
+    <button onclick="displayStory()">Display It</button>
+  </section>
+  <textarea id="story_editor" class="boxsizingBorder" placeholder="Write a totally awesome story here."></textarea>
+  <div id="story_display"></div>
   <footer>
     &copy;2022 | Matthew B. Christensen | Utah
     <div id="last-updated"></div>
   </footer>
+  <script src="../index/js/last-updated.js"></script>
 </body>
 </html>
