finished adding notes to week1 notes for the study materials of this week. May need to tweek further but this is the bulk of it

--- a/week1/week1_notes.html
+++ b/week1/week1_notes.html
@@ -32,6 +32,23 @@
   <p>Data can be easily retrieved from the localStorage using the "localStorage.GetItem()" functioln. Once again I have used this before and didn't have much more than a brief review of the topic.</p>
   <h3>What can I do to allow the user to communicate?</h3>
   <p>I'm not sure what this question is referring to, but I'm guessing it means through inputs. I can give them text boxes and inputs that accept information in all kinds of ways but also help limit the type of response the user is able to give. This makes the input more easily usable and testable. </p>
+  <h3>Master Mobile UX</h3>
+  <h4>Lesson 1: Step 1: How to Rewire Your Brain for Mobile First UX</h4>
+  <p>Desing for the smallest least complicated device first (mobile divices first). This allows you to focus on functionality first before getting complicated with layouts and other things. Now, this does not mean to just make the website responsive, there needs to be a design fully focusing on small phone screens. These will be different from just a small computer screen partially because with a computer screen you can use a small cursor to do the clicking and can be very precise. With phone screens however you have to take into account that fingers are much bigger than cursors and items that you will tap with your finger will need to be much bigger than they would be on a skinny browser on a computer screen.</p>
+  <p>Another reason to start with a phone design, computer sales are going down fast and mobile device use are going up. Chances are, most of your users will be on their phone. This is not a fad, this is the future that we need to plan for.</p>
+  <h4>Lesson 1: Step 2: How to Improve UX by Understanding Users</h4>
+  <p>You have to provide the user with what they came for quick. There are a lot of other people that they can go to and if they can't find what they are looking for quickly and simply they will go somewhere else. It is important to understand the user!</p>
+  <p>At least 49% of users use a 1 handed grip. Larger devices people use two hands on the outside of the device. It is important that the most important buttons are easily accessable without taking hands off the device whenever possible.</p>
+  <p>Speed is extremely important. Just a slight delay looses users and revenue. Best ways to reduce time: reduce image usage and size. SVG/Webfronts. Optimize and minimize css and js files. And finally GZIP files to eliminate unnecessary data.</p>
+  <h4>Lesson 1: Step 3: Better Mobile UX with Strategic Menu Design</h4>
+  <p>Menus at the top are hard to use- place them at the bottom for quick accessability. Make sure that the search bar is also here and anything else they will need for quick navigation.</p>
+  <p>Also note, users are stupid. They will not automatically know what a hamburger menu is. Adding the word Menu or other things like this to universal symbols will result in faster user experiences.</p>
+  <h4>Lesson1: Step 4: Designing Intuitive and Mobile Friendly Forms</h4>
+  <p>Make things simpler so that the user has to think less. For user forms are on mobile devices, make the fields taller. Also, getting rid of labels outside of fields will make the user form more readable and manageable. If you do this however, use flow labels so that after the user types the label still exists. Make sure to get rid of unnecessary fields.</p>
+  <p>Make sure that you enable autofill so that the user can fill out the form quickly. Password masking on typos is bad since typos happen often. Allow them to hide the password if they wish to. Auto advance to next field is important as well to make things quick for the user. Number pads for number input are a must. Also, phone numbers should ALL be clickable since it makes it so much easier from a phone to call the number and users are more likely to actually use it.</p>
+  <h4>Lesson 1: Step 5: Designing a better Mobile Advertising User Experience</h4>
+  <p>Pop ups are a terrible form of ad on phones. Ads also need to be small so that it doesn't take up 40% or more of the screen height. Video ads are effective, so are sneak peaks of larger ads behind the content.</p>
+
   <footer>
     &copy;2022 | Matthew B. Christensen | Utah
     <div id="last-updated"></div>
