finished note taking

--- a/week2/week2_notes.html
+++ b/week2/week2_notes.html
@@ -43,7 +43,11 @@
   <p>WeakSets: <b>IMPORTANT!</b> Creating an Set of objects can be bad, because when the original object is deleted it will still exist in the array. So when you want to do a Set of objects you should do a 'WeakSet' as it will garbage collect any references to 'dead objects'. Only problem with WeakSets is that only object type items can be placed in them. </p>
   <p>Maps: maps create key value pairs similar to hashes or dictionaries. Maps can use any data type as a key. You can easily find the number of key value pairs there are by using the 'size' property. WeakMaps work the same way as WeakSets.</p>
   <p>Loop Tricks: You can loop over arrays with a 'for of' loop. The same can be done with sets. To loop through maps you need to do a 'for of map.keys()' loop. You can also do this with values or simply 'entries'. </p>
-
+  <h4>Chapter 4 of Novice To Ninja</h4>
+  <p>Isn't much to say about this, main thing to note, there is more than 1 way to make a function in js. The first way is by creating an anonymous function by using the syntax, "function() {}". You can also assign these functions to a variable by doing 'let functionName = function() {}'. The next way to make a function is to do an arrow function like, (x, y) => x + y. You can assign names to these as well. 
+  <p>Function Hoisting: Function hoisting makes it so that the functions and variables are all hoisted to the top of the current scope and can be invoded before they have been defined. </p>
+  <p>Map, Reduce, and Filter are all functions that iterate over the entire array for a purpose.</p>
+  </p>
   <footer>
     &copy;2022 | Matthew B. Christensen | Utah
     <div id="last-updated"></div>
