--- a/week6/todo.html
+++ b/week6/todo.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../index/css/normalize.css">
   <link rel="stylesheet" href="../index/css/small.css">
   <link rel="stylesheet" href="../index/css/medium.css">
+  <link rel="stylesheet" href="./todo.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat:wght@100&display=swap" rel="stylesheet">
