adding the input bar at the bottom

--- a/week6/todo.html
+++ b/week6/todo.html
@@ -25,6 +25,7 @@
     Todos
   </h2>
   <div id="todo-list"></div>
+  <div id="input"></div>
   <hr>
   <footer>
     &copy;2022 | Matthew B. Christensen | Utah
