--- a/week6/todo.html
+++ b/week6/todo.html
@@ -24,14 +24,14 @@
   <h2>
     Todos
   </h2>
+  <hr>
   <div id="todo-list"></div>
   <div id="input"></div>
-  <hr>
   <footer>
     &copy;2022 | Matthew B. Christensen | Utah
     <div id="last-updated"></div>
   </footer>
   <script src="../index/js/last-updated.js"></script>
-  <script src="todo.js" type="module"></script>
+  <script src="controller.js" type="module"></script>
 </body>
 </html>
