--- a/week6/todo.html
+++ b/week6/todo.html
@@ -1,37 +1,48 @@
 <!DOCTYPE html>
 
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="TODO">
-  <link rel="stylesheet" href="../index/css/normalize.css">
-  <link rel="stylesheet" href="../index/css/small.css">
-  <link rel="stylesheet" href="../index/css/medium.css">
-  <link rel="stylesheet" href="./todo.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat:wght@100&display=swap" rel="stylesheet">
-  <title>TODO</title>
-</head>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>SWAPI Exercise</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="swstyles.css" />
+  </head>
 
-<body>
-  <header>
+  <body>
     <h1>
-      Matthew B. Christensen
+      <a href="https://swapi.dev/" target="_blank" rel="noreferrer">SWAPI</a>
+      Exercise
     </h1>
-  </header>
-  <h2>
-    Todos
-  </h2>
-  <hr>
-  <div id="todo-list"></div>
-  <div id="input"></div>
-  <footer>
-    &copy;2022 | Matthew B. Christensen | Utah
-    <div id="last-updated"></div>
-  </footer>
-  <script src="../index/js/last-updated.js"></script>
-  <script src="controller.js" type="module"></script>
-</body>
+    <main>
+      <div class="listbox">
+        <table id="shiplist">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Length</th>
+              <th>Crew</th>
+            </tr>
+          </thead>
+
+          <tbody></tbody>
+        </table>
+
+        <a id="prev" href="#">&lt;-Prev</a> <a id="next" href="#">Next -&gt;</a>
+      </div>
+      <div id="detailsbox" class="hidden">
+        <dl>
+          <dt>Name:</dt>
+          <dd class="name"></dd>
+          <dt>Model:</dt>
+          <dd class="model"></dd>
+          <dt>Class:</dt>
+          <dd class="class"></dd>
+          <dt>*Movies:</dt>
+          <dd class="movies"></dd>
+        </dl>
+      </div>
+    </main>
+
+    <script src="fetchJSON.js"></script>
+  </body>
 </html>
