--- a/week10/quakes.html
+++ b/week10/quakes.html
@@ -4,13 +4,18 @@
     <meta charset="utf-8" />
         <title>Local Quakes</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="quakes.css">
     </head>
-
     <body>
         <main>
             <h1>Quake List</h1>
+            <label>Start Date<input type="date" id="start-date" value="2019-01-01"></label>
+            <label>End Date<input type="date" id="end-date" value="2019-02-02"></label>
+            <label>Radius<input type="number" id="radius" min="1" max="200" value="100"></label>
+            <button id="submitButton">Find Earthquakes</button>
             <ul id="quakeList" ></ul>
         </main>
+        <script src="index.js" type="module" ></script>
     </body>
 </html>
         
