I now have a fully functioning bot that can message back and forth with a client and go through a story with them. It also recognizes key words BEGIN and QUIT. It checks types ends stories and starts new ones. Also added tail to the messages so that it looks more like a text message on an iPhone. I did this by using BEFORE and AFTER in css to add a colored square and a white square with the bottom corner curved on each of them. I then overlayed them on eachother so that the white covered most of the colored one to leave the tail like you see in iPhone texts. There is  only one story right now and no memories are yet stored in the 'stories' tab.

--- a/FinalProject/chatbot.html
+++ b/FinalProject/chatbot.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
   <meta charset="utf-8" />
-    <title>Sage: Your Personal Family History Consultant</title>
+    <title>Milo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
@@ -19,7 +19,7 @@
       <div id="chat-history"></div>
       <div class="response-box">
         <!-- <textarea class="visible" id="input-text-box"></textarea> -->
-        <span class="visible, input" id="input-text-box" role="textbox" contenteditable="true"></span>
+        <span class="visible, input" id="input-text-box" role="textbox" contenteditable="true" autofocus></span>
         <button id="send-button">Send</button>
       </div>
     </div>
