finished the semester project

--- a/FinalProject/chatbot.html
+++ b/FinalProject/chatbot.html
@@ -24,15 +24,56 @@
       </div>
     </div>
     <aside id="stories-tab" class="hidden">
-      <div class="story">Story Placeholder 1</div>
-      <div class="story">Story Placeholder 2</div>
-      <div class="story">Story Placeholder 3</div>
-      <div class="story">Story Placeholder 4</div>
-      <div class="story">Story Placeholder 5</div>
-      <div class="story">Story Placeholder 6</div>
-      <div class="story">Story Placeholder 7</div>
+      <div class="story">
+        <div class="story-header">
+          <span>Story Name</span><span>3/26/2022</span>
+        </div>
+        <div class="expanded-story hidden">
+          <hr>
+          <div><span><b>FirstName:</b> Matthew</span></div>
+          <div><span><b>LastName:</b> Christensen</span></div>
+          <div><span><b>Birth Place:</b> Athens, Georgia</span></div>
+          <div><span><b>Birth Date:</b> 6/12/1995</span></div>
+        </div>
+      </div>
+      <div class="story">
+        <div class="story-header">
+          <span>Story Name</span><span>3/26/2022</span>
+        </div>
+        <div class="expanded-story hidden">
+          <hr>
+          <div><span><b>FirstName:</b> Matthew</span></div>
+          <div><span><b>LastName:</b> Christensen</span></div>
+          <div><span><b>Birth Place:</b> Athens, Georgia</span></div>
+          <div><span><b>Birth Date:</b> 6/12/1995</span></div>
+        </div>
+      </div>
+      <div class="story">
+        <div class="story-header">
+          <span>Story Name</span><span>3/26/2022</span>
+        </div>
+        <div class="expanded-story hidden">
+          <hr>
+          <div><span><b>FirstName:</b> Matthew</span></div>
+          <div><span><b>LastName:</b> Christensen</span></div>
+          <div><span><b>Birth Place:</b> Athens, Georgia</span></div>
+          <div><span><b>Birth Date:</b> 6/12/1995</span></div>
+        </div>
+      </div>
+      <div class="story">
+        <div class="story-header">
+          <span>Story Name</span><span>3/26/2022</span>
+        </div>
+        <div class="expanded-story hidden">
+          <hr>
+          <div><span><b>FirstName:</b> Matthew</span></div>
+          <div><span><b>LastName:</b> Christensen</span></div>
+          <div><span><b>Birth Place:</b> Athens, Georgia</span></div>
+          <div><span><b>Birth Date:</b> 6/12/1995</span></div>
+        </div>
+      </div>
     </aside>
-    <script src="js/index.js" type="module"></script>
+    <script src="./js/index.js" type="module"></script>
   </body>
 </html>
         
